# paic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.hpp  paic.R  util.hpp  welford.hpp
logistic/: CMakeLists.txt  data.json  interface.cpp  logistic.stan  model.hpp
